----------
v3.2.8-git
----------

[jan] Use access rules compatible with both Apache 2.2 and 2.4.
[jan] Fix variable name in vacation_addresses hook example.
[jan] Correctly save names of mailbox created from the rule form (Bug #14150).
[mjr] Fix invalid URLs in certain forms when cookies are disabled (Bug #14148).


------
v3.2.7
------

[jan] Update Italian translation.
[mjr] Add database migration for fixing corrupt rule ordering.
[mjr] Fix corruption of rule order when reordering rules in certain cases.


------
v3.2.6
------

[mjr] Fix using transport parameters in Procmail driver.
[jan] Update Czech translation.
[jan] Update Italian translation.
[mjr] Fix selecting incorrect rule when performing any action after reordering
      (Bug #14064 and Bug #13643).
[jan] Fix duplicate messages when using the redirect-and-keep rule with
      Procmail backends.


------
v3.2.5
------

[jan] Add Galician translation.
[mms] Enforce selection of a target folder for the spam filter in the UI (Bug
      #13917).
[jan] Fix Sieve error if days of vacation is unset (Bug #13890).


------
v3.2.4
------

[mms] Rate-limit filters drag/drop changes to prevent race conditions (Bug
      #13819).
[mms] Fix filter drag/drop ordering working in basic view (Bug #13820).
[mms] Maildir requires UTF7-IMAP encoding for folder names (Bug #13378).


------
v3.2.3
------

[mms] Fix determination of preferred backend (Bug #13548).


------
v3.2.2
------

[jan] Disable forward rule by default.
[mms] Fix checking the 'max_forward' permission (Bug #13568).
[mms] IMAP driver needs to explicitly search for UTF-8 text, since we don't
      restrict charset input at the UI level (Bug #13554).
[mjr] Fix issues when preferred configuration contains an array (Bug #13548).


------
v3.2.1
------

[mms] Fix performing more than one filter drag/drop action on a single page
      (Bug #13434).
[mms] Add support for a negative regex test to the Maildrop driver.