@@ -143,8 +143,14 @@ class Ingo_Application extends Horde_Registry_Application
             $menu->add(Ingo_Basic_Script::url(), _("_Script"), 'ingo-script', null, null, null, $vars->page == 'script' ? 'current' : '__noselection');
         }
 
-        if ($injector->getInstance('Ingo_Shares') &&
+        if (($shares = $injector->getInstance('Ingo_Shares')) &&
             empty($conf['share']['no_sharing'])) {
+            if ($shares->getShare($session->get('ingo', 'current_share'))->get('owner') == $registry->getAuth()) {
+                $share = $session->get('ingo', 'current_share');
+            } else {
+                $share = $session->get('ingo', 'backend/id')
+                    . ':' . $registry->getAuth();
+            }
             $menu->add(
                 '#',
                 _("_Permissions"),
@@ -160,8 +166,7 @@ class Ingo_Application extends Horde_Registry_Application
                     array(
                         'params' => array(
                             'app' => 'ingo',
-                            'share' => $session->get('ingo', 'backend/id')
-                                . ':' . $registry->getAuth()
+                            'share' => $share
                         ),
                         'urlencode' => true
                     )
