@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Allow to edit permissions of another user&apos;s rules if that user assigned ownership.
 * [jan] Use access rules compatible with both Apache 2.2 and 2.4.
 * [jan] Fix variable name in vacation_addresses hook example.
 * [jan] Correctly save names of mailbox created from the rule form (Bug #14150).
@@ -1614,6 +1615,7 @@
    <date>2016-01-13</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [jan] Allow to edit permissions of another user&apos;s rules if that user assigned ownership.
 * [jan] Use access rules compatible with both Apache 2.2 and 2.4.
 * [jan] Fix variable name in vacation_addresses hook example.
 * [jan] Correctly save names of mailbox created from the rule form (Bug #14150).
