@@ -2,6 +2,8 @@
 v3.2.8-git
 ----------
 
+[jan] Allow to edit permissions of another user's rules if that user assigned
+      ownership.
 [jan] Use access rules compatible with both Apache 2.2 and 2.4.
 [jan] Fix variable name in vacation_addresses hook example.
 [jan] Correctly save names of mailbox created from the rule form (Bug #14150).
